Fix widget width alignment for search and dashboard page

--- a/graylog2-web-interface/src/components/common/ReactGridContainer.css
+++ b/graylog2-web-interface/src/components/common/ReactGridContainer.css
@@ -1,7 +1,3 @@
-:local(.reactGridLayout) {
-    margin: -10px -10px 0 -10px;
-}
-
 :local(.reactGridLayout).unlocked .react-draggable {
     cursor: move;
 }
